<resources>
    <string name="app_name">Powerclub gym</string>
    <string name="duration">Duration</string>
    <string name="paid">Paid</string>
    <string name="to_pay">To Pay</string>
    <string name="add">Add</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="info">Info</string>
    <string name="card">Card</string>
    <string name="search">Search</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="sum">Sum : </string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_manager">New manager</string>
    <string name="exipred">Exipred</string>
    <string name="statistics">Statistics</string>
    <string name="athlete">Athlete</string>
    <string name="session">Session</string>
    <string name="offers">Offers</string>
    <string name="managers">Managers</string>
    <string name="athletes">Athletes</string>
    <string name="offer">Offer</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="detail">Detail</string>
    <string name="title">Title</string>
    <string name="open">Open</string>
    <string name="number_sessions">Number of sessions</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="save">Save</string>
    <string name="new_debt">New Debt</string>
    <string name="pay_debt">Pay Debt</string>
    <string name="first_name_empty">enter the first name</string>
    <string name="last_name_empty">enter the last name</string>
    <string name="phone_empty">enter the phone number</string>
    <string name="user_name_empty">enter the user name</string>
    <string name="password_empty">enter the password</string>
    <string name="duration_empty">enter th duration</string>

    <string-array name="units_array">
        <item>Day</item>
        <item>Week</item>
        <item>Month</item>
        <item>Year</item>
    </string-array>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="roles_array">
        <item>Owner</item>
        <item>Admin</item>
        <item>Manager</item>
    </string-array>
</resources>
